Added a spinner to the location parser activity to prepare for opening in a custom app. Much, MUCH better introduction screen (No more "overwhelming wall of text"). Updated translations. Deleted some unused translations.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,6 @@
     <string name="alertdialog_button_learnmore_english">Aprende más (En inglés)</string>
     <string name="alertdialog_button_checkagain">Cancelar</string>
     <string name="alertdialog_button_looksgood">Confirmar</string>
+    <string name="alertdialog_button_agree">Aceptar</string>
+    <string name="alertdialog_button_disagree">Discrepar</string>
 </resources>
