--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,6 +221,17 @@
     <string name="button_calculate_values">Calculate Values</string>
     <string name="locationactivity_text_distance">Distance from your location:</string>
     <string name="generic_text_unknown">Unknown</string>
+    <string name="alertdialog_title_privacypolicy">Privacy Policy</string>
+    <string name="alertdialog_text_privacypolicy">Here at Yuhu Innovation, we take your privacy very seriosuly. We will keep this policy as short and jargon-free as possible so you can more easily understand it:\n\nWe will use your location information (since you granted the location permission) to send your location to the phone numbers and application you specify ONLY. We promise not to send any information collected to anywhere except the locations you specify. To achieve this (and to give you peace of mind), this application does not have the network permission required to send data over the network. Please note that, should you choose to send your location to a third-party app, they may handle your information differently.</string>
+    <string name="alertdialog_button_agree">Agree</string>
+    <string name="alertdialog_button_disagree">Disagree</string>
+    <string name="firstrun_text_disagreewithprivacy">We\'re sorry, but you must agree to the privacy policy for this app to work.</string>
+    <string name="firstrun_text_tasksincomplete">You must finish all the tasks above to continue.</string>
+    <string name="firstrun_text_permissiongranted">Permission is already granted.</string>
+    <string name="alertdialog_text_quickstart">This app is designed to quickly send a message containing your location and a link to a mapping service. (If you\'re wondering, that\'s why the location permission is required.) You can save up to 3 phone numbers for quick access and on newer devices (Android 8.0+), you can send a message right from your home screen. To start configuring these options, have a look in the settings. Because we have programmed this app to be as convenient as possible for you, you may be tempted to use this app while driving. All we ask is that you please use this app in accordance to your local laws.</string>
+    <string name="alertdialog_title_quickstart">Quick Start Guide</string>
+    <string name="alertdialog_text_welcomemessage">Thanks you for downloading this app. Before we begin, here\'s a short list of things to review, and then you can be on your way!</string>
+    <string name="alertdialog_title_welcomemessage">Welcome!</string>
 
     <!-- Example settings for Notifications -->
 
