You can now access the map services from the location parser activity. It currently uses the global preference set from settings and does not use the service selected from the dropdown in the activity.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -89,4 +89,5 @@
     <string name="button_restore_settings">恢复</string>
     <string name="backupactivity_toast_failed">错误。</string>
     <string name="title_activity_backup">备份与回复</string>
+    <string name="locationparser_button_open">打开</string>
 </resources>
